0032261: Mesh - some trivial improvements for mesher

BRepMesh_GeomTool::IntSegSeg misses one case, when the result is Glued